--- a/[Thực hành] Tạo bảng cơ bản.html
+++ b/[Thực hành] Tạo bảng cơ bản.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="bt2.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <table border="1">
+    <table border="1" >
         <th>Company</th>
         <th>Contact</th>
         <th>Country</th>
-        <tr>
+        <tr class="color">
             <td>Alfreds Futterkiste</td>
             <td>Maria Andres</td>
             <td>Germany</td>
@@ -21,7 +22,7 @@
             <td>Francisco Chang</td>
             <td>Mexico</td>
         </tr>
-        <tr>
+        <tr class="color">
             <td>Ernst Handel</td>
             <td>Roland Mendel</td>
             <td>Austria</td>
@@ -31,7 +32,7 @@
             <td>Helen Bennett</td>
             <td>UK</td>
         </tr>
-        <tr>
+        <tr class="color">
             <td>Laughing Bacchus Winecellars</td>
             <td>Yoshi Tannamuri</td>
             <td>Canada</td>
