--- a/[Thực hành] Tạo bảng cơ bản.html
+++ b/[Thực hành] Tạo bảng cơ bản.html
@@ -9,35 +9,35 @@
 </head>
 <body>
     <table border="1" >
-        <th>Company</th>
-        <th>Contact</th>
-        <th>Country</th>
-        <tr class="color">
+        <th class="row">Company</th>
+        <th class="row">Contact</th>
+        <th class="row">Country</th>
+        <tr>
             <td>Alfreds Futterkiste</td>
             <td>Maria Andres</td>
             <td>Germany</td>
         </tr>
-        <tr>
+        <tr class="row">
             <td>Centro cormercial Moctezuma</td>
             <td>Francisco Chang</td>
             <td>Mexico</td>
         </tr>
-        <tr class="color">
+        <tr>
             <td>Ernst Handel</td>
             <td>Roland Mendel</td>
             <td>Austria</td>
         </tr>
-        <tr>
+        <tr class="row">
             <td>Island Trading</td>
             <td>Helen Bennett</td>
             <td>UK</td>
         </tr>
-        <tr class="color">
+        <tr>
             <td>Laughing Bacchus Winecellars</td>
             <td>Yoshi Tannamuri</td>
             <td>Canada</td>
         </tr>
-        <tr>
+        <tr class="row">
             <td>Magazzini Alimentari Riuniti</td>
             <td>Giovanni Rovelli</td>
             <td>Italy</td>
