--- a/[Thực hành] Tạo form cơ bản.html
+++ b/[Thực hành] Tạo form cơ bản.html
@@ -16,6 +16,10 @@
                     <option>B</option>
                     <option>C</option>
                 </select>
+            <h3>How many would you like to order?</h3>
+            <input type="radio" name="money" value="money"><strong>1-$10</strong><br>
+            <input type="radio" name="money" value="money"><strong>2-$20</strong><br>
+            <input type="radio" name="money" value="money"><strong>3-$25</strong><br>
             <h3>Name</h3>
                 <input style="text" placeholder="First name" width="20" height="5">
                 <input style="text" placeholder="Last name" width="20" height="5">
