--- a/[Bài tập] Tạo giao diện form đăng ký người dùng.html
+++ b/[Bài tập] Tạo giao diện form đăng ký người dùng.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h3>Họ và tên</h3>
-    <input type="text" width="35"; height="5">
+    <input type="text" name="name" width="35"; height="5">
     <h3>Email</h3>
-    <input type="text" width="35"; height="5">
+    <input type="text" name="email" width="35"; height="5">
     <h3>Số điện thoại</h3>
-    <input type="text" width="35"; height="5">
+    <input type="text" name="phone" width="35"; height="5">
     <h3>Giới tính</h3>
     <input type="radio" name="sex" value="Nam" checked>Nam
     <input type="radio" name="sex" value="Nữ">Nữ<br>
